Set course name. Rename OpenDrupal.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>Drupal 8 Front-end Development | Open Drupal</title>
+		<title>Drupal 8 Front-end Development course | OpenDrupal</title>
 
 		<link rel="stylesheet" href="slide-foundation/node_modules/reveal.js/css/reveal.css">
 		<link rel="stylesheet" href="slide-foundation/css/open-drupal.css">
@@ -25,7 +25,7 @@
 		<div class="reveal">
 			<div class="slides">
         <section data-markdown>
-          # Drupal 8 Front-end Development
+          # OpenDrupal Drupal 8 Front-end Development
           
           Learn to implement a front-end design as a Drupal theme.
           
@@ -39,7 +39,7 @@
 			</div>
       <footer>
         <div class="copyright"><img class="logo" src="slide-foundation/assets/logo-transparent.png" />
-          Drupal 8 Front-end Development
+          OpenDrupal Drupal 8 Front-end Development
           <a class="license" rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" src="slide-foundation/assets/creative-commons-by-sa-80x15.png" /></a>
         </div>
       </footer>
