Add slide numbers.

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
 				transition: 'none',
 				backgroundTransition: 'none',
 			});
+      Reveal.configure({ slideNumber: 'c' });
 		</script>
 	</body>
 </html>
