--- a/lesson-1.html
+++ b/lesson-1.html
@@ -78,6 +78,7 @@
 				transition: 'none',
 				backgroundTransition: 'none',
 			});
+      Reveal.configure({ slideNumber: 'c' });
 		</script>
 	</body>
 </html>
