--- a/lesson-3.html
+++ b/lesson-3.html
@@ -80,6 +80,7 @@
 				transition: 'none',
 				backgroundTransition: 'none',
 			});
+      Reveal.configure({ slideNumber: 'c' });
 		</script>
 	</body>
 </html>
