Remove the version number from Drupal 8 in slides content.

--- a/lesson-3.html
+++ b/lesson-3.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>Drupal 8 Front-end Development | OpenDrupal</title>
+		<title>Drupal Front-end Development | OpenDrupal</title>
 
 		<link rel="stylesheet" href="slide-foundation/node_modules/reveal.js/dist/reset.css">
 		<link rel="stylesheet" href="slide-foundation/node_modules/reveal.js/dist/reveal.css">
@@ -49,7 +49,7 @@
 			</div>
       <footer class="footer">
         <a class="logo" href="https://opendrupal.org" ><img src="slide-foundation/assets/logo-transparent.png" alt="Open Drupal logo"/></a>
-        <a class="course-name" href="https://opendrupal.github.io/opendrupal-drupal-frontend">Drupal 8 Front-end Development</a>
+        <a class="course-name" href="https://opendrupal.github.io/opendrupal-drupal-frontend">Drupal Front-end Development</a>
         <a class="license" rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" src="slide-foundation/assets/creative-commons-by-sa-80x15.png" /></a>
       </footer>
 		</div>
